git ignore and gulp

--- a/workout-tracker/index.html
+++ b/workout-tracker/index.html
@@ -13,9 +13,10 @@
       <ul>
         <li class="logo"><a href="#">BLT</a></li>
         <li><a ui-sref="home">HOME</a></li>
-        <li><a ui-sref="login">LOG-IN</a></li>
+        <li><a href="/auth">LOG-IN</a></li>
         <li><a ui-sref="workout">WORKOUT INDEX</a></li>
         <li><a ui-sref="logWorkout">LOG A WORKOUT</a></li>
+        <li><a ui-sref="myWorkouts">MY WORKOUTS</a></li>
       </ul>
     </nav>
 
